# parallax-scrolling-gif-generator-bot

./: Cargo.toml  README.md
.github/workflows/: ci.yml  gif_publisher.yml
prompts/: prompt_2025-05-30.txt  prompt_2025-05-31.txt  prompt_2025-06-01.txt  prompt_2025-06-02.txt  prompt_2025-06-03.txt  prompt_2025-06-05.txt  prompt_2025-06-09.txt  prompt_2025-06-12.txt  prompt_2025-06-13.txt  prompt_2025-06-15.txt  prompt_2025-06-17.txt  prompt_2025-06-18.txt  prompt_2025-06-19.txt  prompt_2025-06-20.txt  prompt_2025-06-21.txt  prompt_2025-06-22.txt  prompt_2025-06-23.txt  prompt_2025-06-25.txt  prompt_2025-06-28.txt  prompt_2025-06-29.txt  prompt_2025-06-30.txt  prompt_2025-07-01.txt  prompt_2025-07-02.txt  prompt_2025-07-03.txt  prompt_2025-07-04.txt  prompt_2025-07-05.txt  prompt_2025-07-06.txt  prompt_2025-07-07.txt  prompt_2025-07-08.txt  prompt_2025-07-09.txt  prompt_2025-07-10.txt  prompt_2025-07-11.txt  prompt_2025-07-12.txt  prompt_2025-07-13.txt  prompt_2025-07-14.txt  prompt_2025-07-15.txt  prompt_2025-07-16.txt  prompt_2025-07-17.txt  prompt_2025-07-18.txt  prompt_2025-07-19.txt  (+13 more)
src/: main.rs
src/generators/: image_generator.rs  mod.rs  prompt_generator.rs
src/graphics/: color.rs  gif.rs  mod.rs  parallax.rs  render_graphics.rs  sprites.rs  update_graphics.rs
src/state/: constants.rs  event_loop.rs  mod.rs  structs.rs
src/utils/: file_manager.rs  misc.rs  mod.rs  text_processor.rs
timing-macro/: Cargo.toml
timing-macro/src/: lib.rs
